took out debug and fixed navbar on mobile

--- a/custom.css
+++ b/custom.css
@@ -92,9 +92,5 @@ body {
     border-bottom: 0px;
 }
 
-* {
-    background: #000 !important;
-    color: #0f0 !important;
-    outline: solid #f00 1px !important;
-  }
+
 
